--- a/django/django-instagram-clone_kindfamily/instaclone-backend/post/templates/post/post_list.html
+++ b/django/django-instagram-clone_kindfamily/instaclone-backend/post/templates/post/post_list.html
@@ -51,20 +51,28 @@
         <div class="bottom_icons">
           <div class="left_icons">
             <div class="heart_btn">
-              <div class="sprite_heart_icon_outline" name="37" data-name="heartbeat"></div>
+              {% if user in post.like_user_set.all %}
+              <div class="sprite_heart_icon_outline on" name="{{ post.id }}" data-name="heartbeat"></div>
+              {% else %}
+              <div class="sprite_heart_icon_outline" name="{{ post.id }}" data-name="heartbeat"></div>
+              {% endif %}
               <div class="sprite_bubble_icon"></div>
               <div class="sprite_share_icon" data-name="share"></div>
             </div>
           </div>
 
           <div class="right_icon">
-            <div class="sprite_bookmark_outline" name="37" data-name="bookmark"></div>
+            {% if user in post.bookmark_user_set.all %}
+            <div class="sprite_bookmark_outline on" name="{{ post.id }}" data-name="bookmark"></div>
+            {% else %}
+            <div class="sprite_bookmark_outline" name="{{ post.id }}" data-name="bookmark"></div>
+            {% endif %}
           </div>
         </div>
 
         <div class="likes m_text">
-          <span id="like-count-37">좋아요 2,345개</span>
-          <span id="bookmark-count-37"></span>
+          <span id="like-count-{{ post.id }}">좋아요 {{ post.like_count }}개</span>
+          <span id="bookmark-count-{{ post.id }}">북마크 {{ post.bookmark_count }}개</span>
         </div>
 
         <div class="comment_container">
@@ -144,4 +152,8 @@
     </div>
   </div>
 </section>
+{% endblock %}
+
+{% block script %}
+{% include "post/script_ajax.html" %}
 {% endblock %}
