--- a/django/django-pinterest-inflearn/pinterest-clone/config/templates/base.html
+++ b/django/django-pinterest-inflearn/pinterest-clone/config/templates/base.html
@@ -1,10 +1,19 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="UTF-8" />
     <title>pinterest - clone</title>
+
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
   </head>
   <body>
-    <h1>안녕하세요</h1>
+    {% include "header.html" %}
+
+    {% block content %}
+    {% endblock %}
+
+    {% include "footer.html" %}
   </body>
 </html>
