--- a/django/django-pinterest-inflearn/pinterest-clone/config/templates/footer.html
+++ b/django/django-pinterest-inflearn/pinterest-clone/config/templates/footer.html
@@ -1,3 +1,11 @@
+<hr>
 <footer>
-  푸터 영역
+  <div class="menu">
+    <span>공지사항</span> |
+    <span>제휴문의</span> |
+    <span>서비스 소개</span>
+  </div>
+  <div>
+    <h5 class="logo">Pinterest</h5>
+  </div>
 </footer>
