--- a/django/django-pinterest-inflearn/pinterest-clone/config/templates/header.html
+++ b/django/django-pinterest-inflearn/pinterest-clone/config/templates/header.html
@@ -1,3 +1,12 @@
 <header>
-  헤더 영역
+  <div>
+    <h1 class="logo">Pinterest - clone</h1>
+  </div>
+  <div class="menu">
+    <span>메인</span>
+    <span>프로젝트</span>
+    <span>로그인</span>
+    <span>회원가입</span>
+  </div>
 </header>
+<hr>
