--- a/django/django-instagram-clone_kindfamily/instaclone-backend/config/templates/layout.html
+++ b/django/django-instagram-clone_kindfamily/instaclone-backend/config/templates/layout.html
@@ -13,18 +13,18 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="instagram" />
     <meta property="og:description" content="instagram clone" />
-    <meta property="og:image" content="http://kindtiger.dothome.co.kr/insta/imgs/instagram.jpeg" />
+    <meta property="og:image" content="http://kindtiger.dothome.co.kr/insta/images/instagram.jpeg" />
     .
     <!-- Twitter Meta Tags / 트위터 -->
     <meta name="twitter:card" content="instagram clone" />
     <meta name="twitter:title" content="instagram" />
     <meta name="twitter:description" content="instagram clone" />
-    <meta name="twitter:image" content="http://kindtiger.dothome.co.kr/insta/imgs/instagram.jpeg" />
+    <meta name="twitter:image" content="http://kindtiger.dothome.co.kr/insta/images/instagram.jpeg" />
 
     <!-- Google / Search Engine Tags / 구글 검색 엔진 -->
     <meta itemprop="name" content="instagram" />
     <meta itemprop="description" content="instagram clone" />
-    <meta itemprop="image" content="http://kindtiger.dothome.co.kr/insta/imgs/instagram.jpeg" />
+    <meta itemprop="image" content="http://kindtiger.dothome.co.kr/insta/images/instagram.jpeg" />
 
     <link rel="stylesheet" href="{% static 'css/reset.css' %}" />
     <link rel="stylesheet" href="{% static 'css/common.css' %}" />
