--- a/django/django-instagram-clone_kindfamily/instaclone-backend/post/templates/post/post_list.html
+++ b/django/django-instagram-clone_kindfamily/instaclone-backend/post/templates/post/post_list.html
@@ -108,7 +108,7 @@
 
         <div class="likes m_text">
           <span id="like-count-{{ post.id }}">좋아요 {{ post.like_count }}개</span>
-          <span id="bookmark-count-{{ post.id }}">북마크 {{ post.bookmark_count }}개</span>
+          <!--<span id="bookmark-count-{{ post.id }}">북마크 {{ post.bookmark_count }}개</span>-->
         </div>
 
         <div class="comment_container">
