--- a/django/django-instagram-clone_kindfamily/instaclone-backend/post/templates/post/script_ajax.html
+++ b/django/django-instagram-clone_kindfamily/instaclone-backend/post/templates/post/script_ajax.html
@@ -50,7 +50,7 @@
           success: function (response) {
             //alert('성공');
             let bookmarkCount = document.querySelector(`#bookmark-count-${pk}`);
-            bookmarkCount.innerHTML = `북마크 ${response.bookmark_count}개`;
+            //bookmarkCount.innerHTML = `북마크 ${response.bookmark_count}개`;
           },
           error: function (request, status, error) {
             alert(`code: ${request.status}\nmessage: ${request.responseText}\nerror: ${error}`);
