--- a/flask/flask-firebase-blog/blog/templates/base.html
+++ b/flask/flask-firebase-blog/blog/templates/base.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      {% if session["id"] %}
+      {% if session.get("id") %}
       {{ session["username"]}} (<a href="{{ url_for('user_logout') }}">로그아웃</a>)
       {% else %}
       <a href="{{ url_for('user_signin') }}">회원가입</a>
