--- a/flask/flask-firebase-blog/blog/templates/post_detail.html
+++ b/flask/flask-firebase-blog/blog/templates/post_detail.html
@@ -1,5 +1,8 @@
 {% include "base.html" %}
 
 {% block content %}
-<h1>포스트 상세보기 페이지</h1>
+<h1>{{ post.title }}</h1>
+<p>{{ post.username }} {{ post.created_at|formatdatetime }} 조회수 {{ post.view }}</p>
+<p>{{ post.content }}</p>
+<a href="{{ url_for('post_list') }}">목록보기</a>
 {% endblock %}
