--- a/node_js/Express/express-js-cli-app_nunjucks/views/index.html
+++ b/node_js/Express/express-js-cli-app_nunjucks/views/index.html
@@ -1,6 +1,6 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
 
 {% block content %}
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<h1>{{ title }}</h1>
+<p>Welcome to {{ title }}</p>
 {% endblock %}
