--- a/django/django-instagram-clone_kindfamily/instaclone-backend/post/templates/post/post_list.html
+++ b/django/django-instagram-clone_kindfamily/instaclone-backend/post/templates/post/post_list.html
@@ -146,9 +146,10 @@
         </div>
       </article>
       {% endfor %}
-    </div>
 
-    <input type="hidden" id="page" value="0">
+      <div id="post_list_ajax"></div> <!-- post를 계속해 추가하는 코드 -->
+      <input type="hidden" id="page" value="2">
+    </div>
 
     <div class="side_box">
       <div class="user_profile">
