--- a/django/django-instagram-clone_kindfamily/instaclone-backend/config/templates/layout.html
+++ b/django/django-instagram-clone_kindfamily/instaclone-backend/config/templates/layout.html
@@ -44,12 +44,22 @@
             </a>
           </h1>
 
-          <div class="search_box">
+          <!--<div class="search_box">
             <input type="text" placeholder="검색" tabindex="0" id="search-field" />
             <div class="fake_field">
               <span class="sprite_small_search_icon"></span>
               <span>검색</span>
             </div>
+          </div>-->
+          <div class="search_box">
+            <form action="{% url 'post:post_list' %}" method="POST">
+                {% csrf_token %}
+                <input id="search-field" type="text" name="tag" placeholder="태그검색" pattern="#?[\wㄱ-ㅎ|ㅏ-ㅣ|가-힣]+" title="특수문자, 공백 입력불가" required >
+                <div class="fake_field">
+                    <span class=sprite_small_search_icon></span>
+                    <span>태그검색</span>
+                </div>
+            </form>
           </div>
 
           <div class="right_icons">
